changed the final upgrade so that it isn't even visible until the upgrade previous to it is purchased, fixed the secret upgrade

--- a/style.css
+++ b/style.css
@@ -1489,7 +1489,7 @@ body {
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     -webkit-text-stroke: 1px white;
-    text-shadow: 0 0 50px white;
+    text-shadow: 0 0 50px white, 0 0 10px white;
     transform: translate(-50%, -50%);
     animation: jitter 0.05s linear infinite;
 }
